Implementation for config import refactor.

--- a/src/prototype/admin-portal/v1-gpt-5-codex/tsconfig.app.json
+++ b/src/prototype/admin-portal/v1-gpt-5-codex/tsconfig.app.json
@@ -16,8 +16,10 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
+    "resolveJsonModule": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@shared/*": ["../../../shared/*"]
     },
 
     /* Linting */
