--- a/src/prototype/admin-portal/v1-gpt-5-codex/package.json
+++ b/src/prototype/admin-portal/v1-gpt-5-codex/package.json
@@ -49,6 +49,7 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.14",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
